# autogreenlife

./: Cargo.toml
.github/workflows/: build.yml  release.yml
src/: main.rs
