[package]
name = "autogreenlife"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imap = { version = "2.4.1", default-features = false }
regex = "1.10.2"
rustls-connector = "0.18.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
thirtyfour = "0.31.0"
tokio = { version = "1.34.0", features = ["full"] }
selenium-manager = { git = "https://github.com/SeleniumHQ/selenium", branch = "trunk" }
log = "0.4.20"
env_logger = "0.10.1"

